--- a/register.html
+++ b/register.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title dkon-trans="register">Register</title>
     <link rel="stylesheet" href="css/r.css">
+            <link rel="icon" href="https://res.dkon.app/icon-projct/dk_stat_435625988465.ico" type="image/x-icon">
+
 </head>
 <body>
     <div class="container">
-        <h1 class="logo">𝓓𝓪𝓵𝓪𝓶 𝓚𝓸𝓷𝓽𝓪𝓴</h1>
+        <h1 class="logo">Chine Chat</h1>
         <h2 dkon-trans="register">Register</h2>
         <form id="register-form" class="form">
             <input type="text" id="username" name="username" dkon-trans="logintext" placeholder="Username (6-12 characters, letters, digits, underscores)" required>
