--- a/dialogs.html
+++ b/dialogs.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title dkon-trans="messenger">Dkon Messenger</title>
+    <title dkon-trans="messenger">Chine Chat</title>
     <script src="locales/dkon.js"></script>
      <script src="js/dialog-auth.js"></script>
     <script src="https://res.dkon.app/0conf/land-cnf.js"></script>
+            <link rel="icon" href="https://res.dkon.app/icon-projct/dk_stat_435625988465.ico" type="image/x-icon">
+
     <link rel="stylesheet" href="https://res.dkon.app/laptop-style/b/r/bootstrap-4.5.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://res.dkon.app/laptop-style/css/font-awesome.min.css" 
       crossorigin="anonymous" referrerpolicy="no-referrer" />
